mobile search box overlap fix

--- a/src/LayerToggle.css
+++ b/src/LayerToggle.css
@@ -8,7 +8,7 @@
   color: black;
   border-radius: 0.25em;
   box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-  min-width: 10em;
+  min-width: 30%;
   font-size: 14px;
   color: #666666;
 }
